apps/argocd/delete-dex/deployment-patch.yaml
---
$patch: delete
apiVersion: apps/v1
kind: Deployment
metadata:
  name: argocd-dex-server
