apps/argocd/delete-dex/service-patch.yaml
---
$patch: delete
apiVersion: v1
kind: Service
metadata:
  name: argocd-dex-server
