apps/argocd/delete-dex/networkpolicy-patch.yaml
---
$patch: delete
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: argocd-dex-server-network-policy
